added git ingore. basic setup ready

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,5 +10,32 @@
 </head>
 <body>
     <h1>Playfair Week 9 Review</h1>
+    <div id="inputDiv">
+        <form>
+            <select id="sizeIn">
+                <option>tiny</option>
+                <option>small</option>
+                <option>medium</option>
+                <option>large</option>
+                <option>huge</option>
+                <option>enormous</option>
+            </select>
+            <select id="colorIn">
+                <option>red</option>
+                <option>orange</option>
+                <option>yellow</option>
+                <option>green</option>
+                <option>blue</option>
+                <option>purple</option>
+            </select>
+            <input type="text" id="nameIn" placeholder="name">
+            <button type="submit" id="addItemButton">Submit</button>
+        </form>
+    </div>
+    <div id="outputDiv">
+        <ul id="inventoryOut">
+
+        </ul>
+    </div>
 </body>
 </html>
